[gd_scene load_steps=6 format=3 uid="uid://cyu1ngdgeis8b"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_c73yg"]
[ext_resource type="Texture2D" uid="uid://b7dbljpgiixi7" path="res://Assets/white_square.png" id="2_pf8yi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gume6"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_y013t"]
resource_name = "death"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_okiyw"]
_data = {
"death": SubResource("Animation_y013t")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 30
script = ExtResource("1_c73yg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gume6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_pf8yi")

[node name="ProjectileCooldown" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="PlayerDeathTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_okiyw")
}

[connection signal="timeout" from="ProjectileCooldown" to="." method="_on_projectile_cooldown_timeout"]
[connection signal="timeout" from="PlayerDeathTimer" to="." method="_on_player_death_timer_timeout"]
